--- a/Logging Middleware/package.json
+++ b/Logging Middleware/package.json
@@ -2,8 +2,9 @@
   "name": "logging-middleware",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
+    "start": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -11,6 +12,8 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.11.0",
-    "dotenv": "^17.2.2"
+    "dotenv": "^17.2.2",
+    "express": "^4.18.2",
+    "body-parser": "^1.20.2"
   }
 }
